syntax = "proto3";
option go_package = "sgsg/proto";
package proto;

import "auth.proto";
import "profile.proto";

message Empty {}

message Id {
    string id = 1;
}

message Page {
    // TODO: when grpc type genr error is fixed, change ito to int64
    int32 offset = 1;
    int32 limit = 2;
}

message Count {
    // TODO: when grpc type genr error is fixed, change ito to int64
    int32 count = 1;
}

message AuthResponse {
    string token = 1;
    User user = 2;
}

message StripeUrlResponse {
    string url = 1;
}

service AuthService {
    rpc Auth(Empty) returns (AuthResponse) {}

    rpc CreateStripeCheckout(Empty) returns (StripeUrlResponse) {}
    rpc CreateStripePortal(Empty) returns (StripeUrlResponse) {}
}

service ProfileService {
    rpc GetProfile(Empty) returns (Profile) {}
    rpc UpdateProfile(Profile) returns (Profile) {}

    rpc CountNotesByUserId(Empty) returns (Count) {}
    rpc GetNotesByUserId(Page) returns (stream Note) {}
    rpc GetNoteById(Id) returns (Note) {}
    rpc CreateNote(Note) returns (Note) {}
    rpc DeleteNoteById(Id) returns (Empty) {}
}
